feat: Fix PR comments [DHIS2-18117]